--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.13.0",
     "firebase-admin": "^12.6.0",
     "jspdf": "^2.5.2",
+    "lodash": "^4.17.21",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
@@ -30,7 +31,7 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
@@ -38,7 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.4.2"
+    "vite": "^5.4.10"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "postcss.config.js",
