--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@sendgrid/mail": "^8.1.4",
     "express": "^4.21.1",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.6.0",
