--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@sendgrid/mail": "^8.1.4",
+    "chat.js": "^1.0.2",
     "express": "^4.21.1",
     "firebase": "^10.13.0",
     "firebase-admin": "^12.6.0",
@@ -21,6 +22,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
