--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@sendgrid/mail": "^8.1.4",
+    "caniuse-lite": "^1.0.30001696",
     "chat.js": "^1.0.2",
     "express": "^4.21.1",
     "firebase": "^10.13.0",
