--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-google-maps/api": "^2.20.5",
     "@reduxjs/toolkit": "^2.2.7",
     "@sendgrid/mail": "^8.1.4",
     "caniuse-lite": "^1.0.30001696",
@@ -20,15 +21,16 @@
     "firebase-admin": "^12.6.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
-    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.10.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "sweetalert2": "^11.6.13",
